All required functionality implemented. Working on bonus objectives.

--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -9,8 +9,23 @@
 <div class="container body-content">
 
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
+    <h3 th:text="${jobs.size() + ' Result(s)'}"></h3>
 
     <!-- TODO #3 - Use the same list display from search.html -->
+    <div th:if="${jobs} and ${jobs.size()}">
+
+        <table  th:each="item, idx : ${jobs}" th:class="${idx.odd} ? 'odd'"
+                style="width:80%;
+                margin:auto;
+                margin-top: 30px;
+                border: 1px solid Gainsboro;">
+            <tr th:each="job : ${item}" >
+                <th th:text ="${#strings.capitalizeWords(job.key)}" style="width: 20%;"></th>
+                <td th:text="${job.value}"></td>
+            </tr>
+        </table>
+
+    </div>
 
 </div>
 
